# IntelliFarm

./: .clangd  .gitignore  CMakeLists.txt  HomePage.html  README.md  a.out  about.html  ai  build.sh  build_test.sh  files  newdb.db  rab  server  stylepage.css  test
.cache/clangd/index/: TinySHA1.hpp.3EF973A07C724F31.idx  address.hpp.784842101C8C27DD.idx  address.hpp.A09BF1448AE22F25.idx  address.ipp.81443F3AD47A6580.idx  address_v4.hpp.527A8E05D19E2FEB.idx  address_v4.hpp.7AC503B3EB2BD8E0.idx  address_v4.ipp.730BFD7AA83B53C1.idx  address_v4_iterator.hpp.FE85C8C4688F45F5.idx  address_v4_range.hpp.3C5B35865113870B.idx  address_v6.hpp.030A07B181E376AD.idx  address_v6.hpp.F937058D6B8534DA.idx  address_v6.ipp.DF2CF76712D6361B.idx  address_v6_iterator.hpp.B14D8D2C7E9A31E0.idx  address_v6_range.hpp.A906AA9191B9416A.idx  allocator.hpp.D814F05ADB1964C8.idx  any_completion_executor.hpp.8755BA82FE14EF32.idx  any_completion_executor.ipp.63ECD85D5CC2CDDC.idx  any_completion_handler.hpp.D5D03C969668AE62.idx  any_executor.hpp.FB92B729B488876D.idx  any_io_executor.hpp.76148AFD4FB68FC6.idx  (+461 more)
Dashboard/: dashboard.html
dataSets/: filtered.csv  input.csv  processed.csv  target.csv
documentation/: poa.txt
src/: auth.cpp  compute.h  core.cpp  core_test.cpp  dataProcessor.cpp  dataProcessor.py  dbms.cpp  dbms.h  dbms.py  files.cpp  gentarget.py  index.html  main  main.cpp  memArena.cpp  memArena.h  rab.cpp  rab.h  rmlast3.py  run.cpp  run.h  temp.py  testNN.py
src/templates/: index copy.html  index.html  style.css
tests/: ai.test.cpp  dbms.test.cpp  memArena.test.cpp
(+10 files in other folders)
